tests/fixtures/cargo_build_error.txt
   Compiling proc-macro2 v1.0.78
   Compiling unicode-ident v1.0.12
   Compiling serde v1.0.197
   Compiling tokio v1.36.0
   Compiling mish v0.1.0 (/home/user/projects/mish)
warning: unused import: `std::io::Write`
  --> src/main.rs:4:5
   |
4  | use std::io::Write;
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: variable `Foo` should have a snake case name
  --> src/lib.rs:22:9
   |
22 |     let Foo = bar();
   |         ^^^ help: convert the identifier to snake case: `foo`

error[E0433]: failed to resolve: could not find `nonexistent` in `core`
  --> src/lib.rs:10:12
   |
10 | use core::nonexistent;
   |            ^^^^^^^^^^^ could not find `nonexistent` in `core`

error[E0412]: cannot find type `FooBar` in this scope
  --> src/handler.rs:45:20
   |
45 | fn process(x: &FooBar) -> Result<()> {
   |                ^^^^^^ not found in this scope
   |
help: consider importing this type
   |
1  + use crate::types::FooBar;
   |

error[E0308]: mismatched types
  --> src/handler.rs:52:12
   |
52 |     return "hello";
   |            ^^^^^^^ expected `i32`, found `&str`

error: aborting due to 3 previous errors; 2 warnings emitted

For more information about an error, try `rustc --explain E0433`.
